--- a/src/assets/scss/common/_index.scss
+++ b/src/assets/scss/common/_index.scss
@@ -1,16 +1,17 @@
 @use "sass:map";
 @use "sass:math";
 
-
 :root {
-    --input-bg: #eee;
+    --input-bg: #f2f2f4;
     --dark: #37364b;
-    --placeholder-color: #888;
+    --placeholder-color: #777;
     --text: var(--dark);
     --text-secondary: #666;
     --accent: #FB536A;
     --bg: #fff;
     --bg-slider: #ccc;
+    --bg-backdrop : #ffffffbb;
+    --input-bg-backdrop : #eeeef0aa;
     --border-radius: 14px;
 }
 
