--- a/src/assets/scss/common/default.scss
+++ b/src/assets/scss/common/default.scss
@@ -4,7 +4,7 @@
 *,
 *::after,
 *::before {
-    font-family: 'Poppins';
+    font-family: 'Rubik', sans-serif;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
