--- a/src/assets/scss/common/_index.scss
+++ b/src/assets/scss/common/_index.scss
@@ -10,7 +10,7 @@
     --accent: #FB536A;
     --bg: #fff;
     --bg-slider: #ccc;
-    --bg-backdrop : #ffffffbb;
+    --bg-backdrop : ;
     --input-bg-backdrop : #eeeef0aa;
     --border-radius: 14px;
 }
