added part of new routines page

--- a/src/assets/scss/common/_index.scss
+++ b/src/assets/scss/common/_index.scss
@@ -8,9 +8,10 @@
     --text: var(--dark);
     --text-secondary: #666;
     --accent: #FB536A;
+    // --accent-cc: #fb5369cc;
     --bg: #fff;
     --bg-slider: #ccc;
-    --bg-backdrop : ;
+    // --bg-backdrop : ;
     --input-bg-backdrop : #eeeef0aa;
     --border-radius: 14px;
 }
