--- a/src/assets/scss/common/_classes.scss
+++ b/src/assets/scss/common/_classes.scss
@@ -228,3 +228,26 @@ button.btn-full-width.gray {
 .colorTrans{
     transition: 100ms color ease-in-out, 100ms background-color ease-in-out;
 }
+
+.trans-outline{
+    transition: 100ms linear outline;
+
+}
+
+.input-text{
+    border: none;
+    outline: none;
+    width: 100%;
+    padding: 1rem;
+    border-radius: 0.8rem;
+    padding-left: 1.5rem;
+    // background-repeat: no-repeat;
+    // background-size: 1.1em;
+    // background-position: 1.2em center;
+    // padding-left: 3rem;
+    // background-blend-mode: color-burn;
+    transition: 100ms linear outline;
+    &:focus{
+        outline:2px solid var(--accent);
+    }
+}
